--- a/DjangoGIF/static/css/main.css
+++ b/DjangoGIF/static/css/main.css
@@ -1,3 +1,11 @@
+* {
+	margin: 0;
+}
+
+html, body {
+	height: 100%;
+}
+
 body {
 	margin: 0;
 	padding: 0;
@@ -92,12 +100,14 @@ label {
 	width: 150px;
 	min-height: 100px;
 	max-height: 100px;	
+	border-radius: .5em;
 }
 
 .img-wrapper img {
 	width: 100%;
 	min-height: 100px;
-	max-height: 100px;	
+	max-height: 100px;
+	border-radius: .5em;
 }
 
 .img-wrapper:hover {
@@ -107,7 +117,7 @@ label {
 .title {
 	position: absolute;
 	padding: .25em .5em;
-	top: -1.75em;
+	top: -1.2em;
 	left: .75em;
 	background-color: #25B972;
 	color: white;
@@ -174,9 +184,70 @@ label {
 	border: none;
 }
 
-/* Buttons ******************************************************************/
+/* Footer *******************************************************************/
+.wrapper {
+	min-height: 100%;
+	margin: 0 auto -10em;
+}
 
-/***** Make parent btn class, refactor this CSS */
+.footer {
+	position: relative;
+	width: 100%;
+	height: 10em;	
+	text-align: center;
+	color: #bebebe;
+	background-color: #4c4c4c;
+	box-shadow: inset 0px 5px 16px -5px rgba(0,0,0,0.75);
+}
+
+.push {
+	height: 10em;
+}
+
+.footer a {
+	color: #bebebe;
+}
+
+.footer a:hover {
+	color: #6b71ce;
+}
+
+.footer-logo {	
+	display: inline-block;	
+	margin: .5em;
+}
+
+.footer-logo div {
+	display: inline-block;
+	font-size: 2em;
+}
+
+.footer-cache {
+	font-family: 'Lobster', cursive;
+}
+
+.footer-problems {
+	margin: 0;
+}
+
+.footer-problems p {
+	margin: 0;
+}
+
+.footer-problems div {
+	font-family: 'Open Sans';	
+	font-size: .75em;
+}
+
+.footer-nav-links {
+	margin: 1em;
+}
+
+.footer-nav-links a {
+	margin: 0 .5em;
+}
+
+/* Buttons ******************************************************************/
 .btn {
 	position: relative;	
 	text-align: center;
@@ -415,7 +486,6 @@ label {
 .gif-form-section {
 	position: relative;
 	padding: .75em;	
-	border: .1em solid white;
 	border-radius: .5em;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
@@ -423,13 +493,10 @@ label {
 .gif-form-title {	
 	display: inline-block;
 	position: absolute;
-	top: -.75em;
-	padding: .25em .5em;
+	top: -.95em;
+	padding: .25em .25em;
 	font-size: 1em;	
-	color: white;	
-	border-radius: 1em;	
-	border: .1em solid white;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+	color: white;
 }
 
 .gif-form-title div {
@@ -571,7 +638,7 @@ label {
 	position: relative;
 	display: inline-block;
 	margin: 1em auto;
-	margin-top: 3em;
+	margin-top: 5em;
 	padding: 2em;
 	opacity: 0.9;
 	text-align: center;
@@ -582,26 +649,13 @@ label {
 	border-radius: 1em;
 }
 
-.profile-name {	
-	position: relative;
-	top: -2em;
-	padding: 0 .5em;
-	margin: 0 auto;
-	margin-bottom: -2em;
-	font-family: 'Open Sans';
-	font-size: 2em;
-	height: 1.75em;
-	line-height: 1.75em;
-	border: .1em solid white;
-	border-radius: .5em;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-}
-
 .profile-avatar {	
-	position: relative;
-	display: block;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: -3em;
 	margin: 0 auto;
-	margin-top: 1em;
+	margin-top: -1em;
 }
 
 .profile-avatar img {
@@ -609,7 +663,20 @@ label {
 	height: 8em;
 	width: 8em;
 	border-radius: 50%;	
-	border: .3em solid white;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+}
+
+.profile-name {	
+	position: relative;
+	margin: 0 auto;
+	margin-top: 1.25em;
+	margin-bottom: -1.15em;
+	z-index: 3;
+	top: -.5em;
+	font-family: 'Open Sans';
+	font-size: 2em;
+	height: 1.75em;
+	line-height: 1.75em;
 }
 
 .profile-stats {
@@ -650,6 +717,7 @@ label {
 .inner-nav {
 	position: relative;
 	margin: 0 auto;
+	margin-bottom: 1em;
 	padding: 1em;
 	text-align: center;
 	max-width: 38em;
@@ -682,7 +750,7 @@ label {
 	display: block !important;
 }
 
-.inner-tag-nav {
+.inner-tag-nav, .sort-options {
 	position: absolute;
 	z-index: 7;
 	margin: 0 auto;
@@ -692,6 +760,22 @@ label {
 	text-align: center;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	border-radius: .25em; 
+}
+
+.sort:hover > .sort-options {
+	display: block !important;
+}
+
+.sort-options {
+	width: 6em;
+	text-align: left;
+	color: #4c4c4c;
+}
+
+.sort-options div {
+	padding: .25em 0;
+	margin: .75em 0;
+	font-size: .75em;
 }
 
 .inner-tag-nav .tag:hover {
@@ -868,6 +952,29 @@ label {
 	font-size: 1.25em;
 }
 
+.copy-url {
+	position: absolute;
+	z-index: 2;
+	right: 0.75em;
+	top: 4.6em;
+	color: white;
+	text-shadow: 1px 1px 3px #000;
+}
+
+.gif-expand {
+	position: absolute;
+	z-index: 2;
+	left: 0.75em;
+	top: 4.6em;
+	color: white;
+	text-shadow: 1px 1px 3px #000;
+}
+
+.gif-expand:hover, .copy-url:hover {
+	cursor: pointer;
+	color: #25B972;
+}
+
 .edit-icon {
 	display: inline-block;
 	position: absolute;
@@ -970,19 +1077,6 @@ label {
 	transform: scale(3);
 }
 
-.gif-expand {
-	position: absolute;
-	left: 0.75em;
-	top: 4.6em;
-	color: white;
-	text-shadow: 1px 1px 3px #000;
-}
-
-.gif-expand:hover {
-	cursor: pointer;
-	color: #25B972;
-}
-
 .focused {
 	z-index: 6;
 	-ms-transform: scale(1.2);
@@ -991,7 +1085,7 @@ label {
 }
 
 .gif-grid-element .img-wrapper {
-	position: absolute;	
+	position: absolute;
 	margin: 0 auto;
 	left: 0;
 	right: 0;
@@ -1003,6 +1097,7 @@ label {
 	left: 0;
 	right: 0;
 	width: inherit;
+	border-radius: .5em;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 
@@ -1010,13 +1105,18 @@ label {
 	cursor: pointer;
 }
 
+.gif-url {
+	position: relative;
+	width: 95%;
+}
+
 .gif-label {
 	position: relative;
 	margin: 0;
-	margin-top: 6.25em;
+	margin-top: 9.25em;
 	text-align: left;
-	color: #498FBD;
-	font-size: 1.15em
+	color: #4c4c4c;
+	font-size: .8em
 }
 
 .gif-date {
@@ -1052,9 +1152,10 @@ label {
 .tag {
 	display: inline-block;	
 	margin: .3em;
-	padding: .35em;
+	padding: .3em .8em;
 	background-color: #72ADD3;
-	color: white;	
+	font-size: .8em;
+	color: white;
 	-webkit-box-shadow: 0px 6px 0px #4b96c7;
 	-moz-box-shadow: 0px 6px 0px #4b96c7;
 	box-shadow: 0px 6px 0px #4b96c7;
@@ -1135,8 +1236,8 @@ label {
 .tags-to-be-added {
 	margin: 1em auto;
 	margin-bottom: 0;
-	border: .1em solid #38749b;
 	border-radius: 1em;
+	font-size: .8em;
 }
 
 .tags-to-be-added-title {
@@ -1247,6 +1348,35 @@ label {
 }
 
 /* Edit Profile Page ********************************************/
+.edit-profile-delete-wrapper {
+	position: absolute;
+	z-index: 1;
+	top: 0;
+	right: 0;
+	background-color: rgba(0, 0, 0, 0.8);
+	width: 100%;
+	height: 100%;
+	border-radius: .75em;
+}
+
+.edit-profile-delete {
+	position: relative;
+	top: 25%;
+}
+
+.edit-profile-delete p {	
+	text-align: center;
+	color: white;
+	text-shadow: 1px 1px 3px #000;
+}
+
+.edit-profile-delete .btn {
+	margin: 1em auto;
+	height: 2em;
+	line-height: 2em;
+	width: 80%;
+}
+
 .edit-profile-avatar {
 	position: relative;
 	text-align: center;
@@ -1258,9 +1388,41 @@ label {
 }
 
 .edit-profile-avatar .img-wrapper img {
-	width: 5em;
-	height: 5em;
+	width: 8em;
+	height: 8em;
+	min-width: 8em;
+	min-height: 8em;
 	border-radius: 50%;
 	border: .3em solid white;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+}
+
+.delete-profile-button {
+	display: inline-block;
+	position: relative;
+	padding: .2em .75em;
+	top: -1.75em;
+	right: -18em;
+	color: white;	
+	text-shadow: 1px 1px 3px #000;
+	border-radius: .5em;
+}
+
+.delete-profile-button:hover {
+	cursor: pointer;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+}
+
+.delete-profile-button p {
+	display: inline-block;
+	font-size: .75em;
+}
+
+.delete-profile-button i {
+	display: inline-block;
+	position: relative;
+	margin: 0 .2em;
+	top: .1em;
+	font-size: 1.25em;
+	color: #ff3434;		
 }
