CSS style tweaks and markup edits

--- a/DjangoGIF/apps/home/templates/home/base.html
+++ b/DjangoGIF/apps/home/templates/home/base.html
@@ -61,10 +61,10 @@
         </a>
 
         <div class="footer-problems">
-            <p>Trouble with the service?</p>
+            <p>Problems? Feedback?</p>
             <div>
                 <i class="fa fa-paper-plane"></i>
-                <a href="mailto:tylerkershner@gmail.com">tylerkershner@gmail.com</a>
+                <a href="mailto:tylerkershner@gmail.com">Contact Me</a>
             </div>
         </div>
 
