--- a/DjangoGIF/apps/users/templates/users/edit-profile.html
+++ b/DjangoGIF/apps/users/templates/users/edit-profile.html
@@ -1,7 +1,7 @@
 {% extends 'home/base.html' %}
 {% block content %}
 
-<form action="/u/{{ username }}/update-profile/" method="post" class="main-form animate" style="margin-top: 10%;">
+<form action="/u/{{ username }}/update-profile/" method="post" class="main-form animate">
     <div class="edit-profile-delete-wrapper hidden">
         <div class="edit-profile-delete">
             <p>Are you sure?  This cannot be undone!</p>
