--- a/DjangoGIF/apps/home/templates/home/signup.html
+++ b/DjangoGIF/apps/home/templates/home/signup.html
@@ -5,7 +5,7 @@
 {% endif %}
 
 
-<form action="{% url 'home:create-account' %}" method="post" class="main-form animate" style="margin-top: 10%;">
+<form action="{% url 'home:create-account' %}" method="post" class="main-form animate">
     <h1 class="title">Sign Up!</h1>
 
     {% csrf_token %}
