Did some quick refactoring of CSS and JS, added comments

--- a/DjangoGIF/apps/users/templates/users/view.html
+++ b/DjangoGIF/apps/users/templates/users/view.html
@@ -173,7 +173,7 @@
 
                         <p class="gif-date">{{ object.created }}</p>
                         <p class="gif-label">{{ object.label }}</p>
-                        <i class="fa fa-link copy-url"></i>
+                        <i class="fa fa-link copy-url animate"></i>
                         <i class="fa fa-expand gif-expand animate"></i>
                         <input type="text" class="gif-url hidden" value="{{ object.url }}">
 
@@ -244,7 +244,7 @@
 
                     <img class="gif-grid-thumbnail animate" src="{{object.thumbnail.url}}">
                     <p class="gif-label">{{ object.label }}</p>
-                    <i class="fa fa-link copy-url"></i>
+                    <i class="fa fa-link copy-url animate"></i>
                     <i class="fa fa-expand gif-expand animate"></i>
                     <input type="text" class="gif-url hidden" value="{{ object.url }}">
 
