--- a/DjangoGIF/static/css/main.css
+++ b/DjangoGIF/static/css/main.css
@@ -4,9 +4,6 @@
 
 html, body {
 	height: 100%;
-}
-
-body {
 	margin: 0;
 	padding: 0;
 	background-color: #F2F2F2;
@@ -19,12 +16,6 @@ a {
 	text-decoration: none;
 }
 
-hr {
-	background-color: #498FBD;
-	border: 0;
-	height: .25em;
-}
-
 input {
 	display: block;
 	margin: .5em auto;
@@ -32,117 +23,6 @@ input {
 	font-family: 'Quicksand', sans-serif;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	border: none;
-	border-radius: .2em;
-}
-
-label {
-	display: block;
-	margin-left: 1em;
-	margin-bottom: -.75em;	
-}
-
-.label {
-	position: relative;
-	margin: 0;
-	left: 4em;
-	bottom: .75em;
-	text-align: left;
-	color: white;
-	font-size: .75em;
-	text-shadow: 1px 1px 3px #000;
-}
-
-.container {
-	text-align: center;
-}
-
-.warning {
-	background-color: #ff6767 !important;
-	color: white !important;
-	-webkit-box-shadow: 0px 6px 0px #ff3434 !important;
-	-moz-box-shadow: 0px 6px 0px #ff3434 !important;
-	box-shadow: 0px 6px 0px #ff3434 !important;
-}
-
-.anchor {
-	display: block;
-	position: relative;
-	top: -7em;
-}
-
-.animate {
-	-webkit-transition: all .4s ease-in-out;
-	-moz-transition: all .4s ease-in-out;
-	-o-transition: all .4s ease-in-out;
-	transition: all .4s ease-in-out;
-}
-
-.animate-fast {
-	-webkit-transition: all .2s ease-in-out;
-	-moz-transition: all .2s ease-in-out;
-	-o-transition: all .2s ease-in-out;
-	transition: all .2s ease-in-out;
-}
-
-.animate-bg {
-	-webkit-transition: background-color .4s ease-in-out;
-	-moz-transition: background-color .4s ease-in-out;
-	-o-transition: background-color .4s ease-in-out;
-	transition: background-color .4s ease-in-out;
-}
-
-.img-wrapper {
-	position: relative;
-	max-width: 150px;
-}
-
-.img-wrapper video {
-	width: 150px;
-	min-height: 100px;
-	max-height: 100px;	
-	border-radius: .5em;
-}
-
-.img-wrapper img {
-	width: 100%;
-	min-height: 100px;
-	max-height: 100px;
-	border-radius: .5em;
-}
-
-.img-wrapper:hover {
-	cursor: pointer;
-}
-
-.title {
-	position: absolute;
-	padding: .25em .5em;
-	top: -1.2em;
-	left: .75em;
-	background-color: #25B972;
-	color: white;
-	font-size: 1.75em;
-	text-shadow: 1px 1px 3px #000;
-	border: .15em solid white;
-	border-radius: .15em;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-}
-
-.helptext {	
-	display: none;
-}
-
-.message {
-	margin: 1em auto;
-	padding: 1em;
-	width: 40%;
-	min-width: 15em;
-	background-color: #72ADD3;	
-	font-family: 'Open Sans';
-	color: white;
-	text-align: center;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-	border-bottom: .4em solid #4b96c7;
 	border-radius: .25em;
 }
 
@@ -184,6 +64,98 @@ label {
 	border: none;
 }
 
+.title {
+	position: absolute;
+	padding: .25em .5em;
+	top: -1.2em;
+	left: .75em;
+	background-color: #25B972;
+	color: white;
+	font-size: 1.75em;
+	text-shadow: 1px 1px 3px #000;
+	border: .15em solid white;
+	border-radius: .15em;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+}
+
+.label {
+	position: relative;
+	margin: 0;
+	left: 4em;
+	bottom: .75em;
+	text-align: left;
+	color: white;
+	font-size: .75em;
+	text-shadow: 1px 1px 3px #000;
+}
+
+.container {
+	text-align: center;
+}
+
+.warning {
+	background-color: #ff6767 !important;
+	box-shadow: 0px 6px 0px #ff3434 !important;
+}
+
+/* Extra styling for anchors to offset fixed nav */
+.anchor {
+	display: block;
+	position: relative;
+	top: -7em;
+}
+
+/* CSS Transitions */
+.animate {
+	transition: all .4s ease-in-out;
+}
+
+.animate-fast {
+	transition: all .2s ease-in-out;
+}
+
+.animate-bg {
+	transition: background-color .4s ease-in-out;
+}
+
+/* Responsive images/videos */
+.img-wrapper {
+	position: relative;
+	max-width: 150px;
+}
+
+.img-wrapper video {
+	width: 150px;
+	min-height: 100px;
+	max-height: 100px;	
+	border-radius: .5em;
+}
+
+.img-wrapper img {
+	width: 100%;
+	min-height: 100px;
+	max-height: 100px;
+	border-radius: .5em;
+}
+
+.img-wrapper:hover {
+	cursor: pointer;
+}
+
+.message {
+	margin: 1em auto;
+	padding: 1em;
+	width: 40%;
+	min-width: 15em;
+	background-color: #72ADD3;	
+	font-family: 'Open Sans';
+	color: white;
+	text-align: center;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+	border-bottom: .4em solid #4b96c7;
+	border-radius: .25em;
+}
+
 /* Footer *******************************************************************/
 .wrapper {
 	min-height: 100%;
@@ -220,6 +192,11 @@ label {
 .footer-logo div {
 	display: inline-block;
 	font-size: 2em;
+}
+
+.footer-gif {
+	position: relative;
+	left: .15em;
 }
 
 .footer-cache {
@@ -271,170 +248,122 @@ label {
 
 .green-btn {
 	background-color: #45C788;
-	-webkit-box-shadow: 0px 6px 0px #32a76e;
-	-moz-box-shadow: 0px 6px 0px #32a76e;
 	box-shadow: 0px 6px 0px #32a76e; 
 }
 
 .green-btn:hover {	
 	background-color: #32a76e;
-	-webkit-box-shadow: 0px 6px 0px #268054;
-	-moz-box-shadow: 0px 6px 0px #268054;
 	box-shadow: 0px 6px 0px #268054;
 }
 
 .green-btn:active, .green-btn-selected {	
 	background-color: #32a76e;
-	-webkit-box-shadow: 0px 2px 0px #268054;
-	-moz-box-shadow: 0px 2px 0px #268054;
 	box-shadow: 0px 2px 0px #268054;
 }
 
 .green-btn-selected:hover {
 	background-color: #268054;
 	box-shadow: none;
-	-webkit-box-shadow: 0px 2px 0px #1a593a;
-	-moz-box-shadow: 0px 2px 0px #1a593a;
 	box-shadow: 0px 2px 0px #1a593a;
 }
 
 .blue-btn {
 	background-color: #72ADD3;
-	-webkit-box-shadow: 0px 6px 0px #4c97c7;
-	-moz-box-shadow: 0px 6px 0px #4c97c7;
 	box-shadow: 0px 6px 0px #4c97c7; 
 }
 
 .blue-btn:hover {
 	background-color: #4c97c7;
-	-webkit-box-shadow: 0px 6px 0px #357dab;
-	-moz-box-shadow: 0px 6px 0px #357dab;
 	box-shadow: 0px 6px 0px #357dab;
 }
 
 .blue-btn:active, .blue-btn-selected {
 	background-color: #4c97c7;
-	-webkit-box-shadow: 0px 2px 0px #357dab;
-	-moz-box-shadow: 0px 2px 0px #357dab;
 	box-shadow: 0px 2px 0px #357dab;
 }
 
 .blue-btn-selected:hover {
 	background-color: #357dab;
-	-webkit-box-shadow: 0px 2px 0px #296184;
-	-moz-box-shadow: 0px 2px 0px #296184;
 	box-shadow: 0px 2px 0px #296184;
 }
 
 .red-btn {
 	background-color: #ff3434;
-	-webkit-box-shadow: 0px 6px 0px #ff0101;
-	-moz-box-shadow: 0px 6px 0px #ff0101;
 	box-shadow: 0px 6px 0px #ff0101; 
 }
 
 .red-btn:hover {
 	background-color: #ff0101;
-	-webkit-box-shadow: 0px 6px 0px #e70000;
-	-moz-box-shadow: 0px 6px 0px #e70000;
 	box-shadow: 0px 6px 0px #e70000;
 }
 
 .red-btn:active, .red-btn-selected {
 	background-color: #ff0101;
-	-webkit-box-shadow: 0px 2px 0px #e70000;
-	-moz-box-shadow: 0px 2px 0px #e70000;
 	box-shadow: 0px 2px 0px #e70000;
 }
 
 .red-btn-selected:hover {
 	background-color: #e70000;
-	-webkit-box-shadow: 0px 2px 0px #b40000;
-	-moz-box-shadow: 0px 2px 0px #b40000;
 	box-shadow: 0px 2px 0px #b40000;
 }
 
 .yellow-btn {
 	background-color: #FFB558;
-	-webkit-box-shadow: 0px 6px 0px #ff9e25;
-	-moz-box-shadow: 0px 6px 0px #ff9e25;
 	box-shadow: 0px 6px 0px #ff9e25; 
 }
 
 .yellow-btn:hover {
 	background-color: #ff9e25;
-	-webkit-box-shadow: 0px 6px 0px #f18600;
-	-moz-box-shadow: 0px 6px 0px #f18600;
 	box-shadow: 0px 6px 0px #f18600;
 }
 
 .yellow-btn:active, .yellow-btn-selected {	
 	background-color: #ff9e25;
-	-webkit-box-shadow: 0px 2px 0px #f18600;
-	-moz-box-shadow: 0px 2px 0px #f18600;
 	box-shadow: 0px 2px 0px #f18600;
 }
 
 .yellow-btn-selected:hover {
 	background-color: #f18600;
-	-webkit-box-shadow: 0px 2px 0px #be6a00;
-	-moz-box-shadow: 0px 2px 0px #be6a00;
 	box-shadow: 0px 2px 0px #be6a00;
 }
 
 .purple-btn {
 	background-color: #6b71ce;
-	-webkit-box-shadow: 0px 6px 0px #454cc1;
-	-moz-box-shadow: 0px 6px 0px #454cc1;
 	box-shadow: 0px 6px 0px #454cc1; 
 }
 
 .purple-btn:hover {
 	background-color: #454cc1;
-	-webkit-box-shadow: 0px 6px 0px #353b9e;
-	-moz-box-shadow: 0px 6px 0px #353b9e;
 	box-shadow: 0px 6px 0px #353b9e;
 }
 
 .purple-btn:active, .purple-btn-selected {
 	background-color: #454cc1;
-	-webkit-box-shadow: 0px 2px 0px #353b9e;
-	-moz-box-shadow: 0px 2px 0px #353b9e;
 	box-shadow: 0px 2px 0px #353b9e;
 }
 
 .purple-btn-selected:hover {
 	background-color: #353b9e;
-	-webkit-box-shadow: 0px 2px 0px #282d78;
-	-moz-box-shadow: 0px 2px 0px #282d78;
 	box-shadow: 0px 2px 0px #282d78;
 }
 
 .peach-btn {
 	background-color: #ff8358;
-	-webkit-box-shadow: 0px 6px 0px #ff5d25;
-	-moz-box-shadow: 0px 6px 0px #ff5d25;
 	box-shadow: 0px 6px 0px #ff5d25; 
 }
 
 .peach-btn:hover {
 	background-color: #ff5d25;
-	-webkit-box-shadow: 0px 6px 0px #f13e00;
-	-moz-box-shadow: 0px 6px 0px #f13e00;
 	box-shadow: 0px 6px 0px #f13e00;
 }
 
 .peach-btn:active, .peach-btn-selected {
 	background-color: #ff5d25;
-	-webkit-box-shadow: 0px 2px 0px #f13e00;
-	-moz-box-shadow: 0px 2px 0px #f13e00;
 	box-shadow: 0px 2px 0px #f13e00;
 }
 
 .peach-btn-selected:hover {
 	background-color: #f13e00;
-	-webkit-box-shadow: 0px 2px 0px #be3100;
-	-moz-box-shadow: 0px 2px 0px #be3100;
 	box-shadow: 0px 2px 0px #be3100;
 }
 
@@ -474,42 +403,6 @@ label {
 	font-size: 1.75em;
 }
 
-.gif-form {
-	position: relative;
-}
-
-.gif-form input {
-	margin: .75em auto;
-	width: 90%;
-}
-
-.gif-form-section {
-	position: relative;
-	padding: .75em;	
-	border-radius: .25em;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
-}
-
-.gif-form-title {	
-	display: inline-block;
-	position: absolute;
-	top: -.95em;
-	padding: .25em .5em;
-	font-size: 1em;	
-	color: white;
-}
-
-.gif-form-title div {
-	position: absolute;
-	padding: 0 .25em;
-	z-index: 2;
-	top: -.65em;
-}
-
-.helptext {
-	margin-left: 1em;
-}
-
 .cancel {
 	margin: .25em auto;
 	width: 83%;
@@ -519,10 +412,10 @@ label {
 }
 
 .hidden {
-	display: none !important;
+	display: none !important;	
 }
 
-/* Profile View Styles *********************************************************/
+/* Main navbar */
 .nav {
 	position: relative;
 	z-index: 6;
@@ -630,14 +523,8 @@ label {
 	margin: .25em;
 }
 
-.nav-profile {
-	position: absolute;
-	top: 4.5em;
-	right: 1em;
-	color: white;
-	font-size: 1.3em;
-}
-
+/* Profile View Styles *********************************************************/
+/* Box with profile info */
 .profile-info {	
 	position: relative;
 	display: inline-block;
@@ -701,23 +588,7 @@ label {
 	font-size: 1.5em;
 }
 
-#tag-nav {
-}
-
-.tag-nav {
-	position: absolute;
-	z-index: 5;
-	margin: 0 auto;
-	left: 0;
-	right: 0;
-	padding: .75em;
-	width: 15em;
-	background-color: #d9d9d9;
-	text-align: center;
-	box-shadow: 1px 5px 15px -5px #000;
-	border-radius: .25em;
-}
-
+/* Navbar right under profile info box */
 .inner-nav {
 	position: relative;
 	margin: 0 auto;
@@ -784,8 +655,6 @@ label {
 
 .inner-tag-nav .tag:hover {
 	background-color: #4b96c7;
-	-webkit-box-shadow: 0px 6px 0px #357caa;
-	-moz-box-shadow: 0px 6px 0px #357caa;
 	box-shadow: 0px 6px 0px #357caa;
 }
 
@@ -835,6 +704,7 @@ label {
 	width: 60%;
 }
 
+/* Main Add GIF Form */
 .add-gif-form {
 	position: fixed;
 	z-index: 10;
@@ -868,6 +738,7 @@ label {
 	border: none;
 }
 
+/* Gif Grids */
 #all-gif-grid {
 	margin: 0 auto !important;
 	width: 100%;
@@ -915,16 +786,12 @@ label {
 
 .tag-settings-icon:hover {
 	cursor: pointer;
-	-ms-transform: scale(1.2);
-	-ms-webkit: scale(1.2);
 	transform: scale(1.2);
 }
 
 .tag-settings-icon-clicked {
 	z-index: 9;
 	border-radius: .25em;
-	-ms-transform: scale(1.2) !important;
-	-ms-webkit: scale(1.2) !important;
 	transform: scale(1.2) !important;
 }
 
@@ -942,8 +809,11 @@ label {
 	font-size: 1.25em;
 }
 
-.copy-url {
+/* Icons inside each Gif thumbnail */
+.copy-url, .gif-expand {
 	position: absolute;
+	width: 1em;
+	height: 1em;
 	z-index: 2;
 	right: 0.75em;
 	top: 4.6em;
@@ -952,57 +822,19 @@ label {
 }
 
 .gif-expand {
-	position: absolute;
-	z-index: 2;
 	left: 0.75em;
-	top: 4.6em;
-	color: white;
-	text-shadow: 1px 1px 3px #000;
 }
 
 .gif-expand:hover, .copy-url:hover {
 	cursor: pointer;
-	color: #25B972;
-}
-
-.edit-icon {
-	display: inline-block;
-	position: absolute;
-	top: 5.75em;
-	left: .75em;
-	width: 3em;
-	color: #7ae4b1;
-	text-shadow: 1px 1px 3px #000;
-}
-
-.edit-icon:hover {
-	cursor: pointer;
-	color: #7ae4b1;
-}
-
-.edit-icon-desc {	
-	display: inline-block;
-	position: relative;
-	bottom: .2em;
-}
-
-.delete-icon {
-	position: absolute;
-	right: 0.5em;
-	top: 0.5em;
-	color: #ff6767 !important;
-	text-shadow: 1px 1px 3px #000;
-}
-
-.delete-icon:hover {
-	cursor: pointer;
-	color: #ff3434 !important;
+	color: #4c4c4c;
 }
 
 .delete-form {
-	margin-bottom: 2em;
+	margin-bottom: 2em;	
 }
 
+/* Hidden div inside Gif elements, activated when bulk options seleced */
 .bulk-wrapper {
 	position: absolute;
 	z-index: 3;
@@ -1036,6 +868,7 @@ label {
 	color: #25B972 !important;
 }
 
+/* Elements of the Gif Grids */
 .gif-grid-element {	
 	position: relative;
 	display: inline-block;
@@ -1051,26 +884,38 @@ label {
 
 .gif-grid-element:hover {
 	z-index: 7;
-	-ms-transform: scale(1.2);
-	-ms-webkit: scale(1.2);
 	transform: scale(1.2);
 }
 
-.gif-grid-element:active {
-	
+/* Forms within Gif grid elements */
+.gif-form input {
+	margin: .75em auto;
+	width: 90%;
+}
+
+.gif-form-section {
+	position: relative;
+	padding: .75em;	
+	border-radius: .25em;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+}
+
+.gif-form-title {	
+	display: inline-block;
+	position: absolute;
+	top: -.95em;
+	padding: .25em .5em;
+	font-size: 1em;	
+	color: white;
 }
 
 .expanded {
 	z-index: 6 !important;
-	-ms-transform: scale(3);
-	-ms-webkit: scale(3);
 	transform: scale(3);
 }
 
 .focused {
 	z-index: 6;
-	-ms-transform: scale(1.2);
-	-ms-webkit: scale(1.2);
 	transform: scale(1.2);
 }
 
@@ -1116,6 +961,7 @@ label {
 	text-align: center;	
 }
 
+/* Tag display/add form inside Gif Grid Elements */
 .tags {
 	position: relative;
 	margin: 1.5em auto;
@@ -1146,8 +992,6 @@ label {
 	background-color: #72ADD3;
 	font-size: .8em;
 	color: white;
-	-webkit-box-shadow: 0px 6px 0px #4b96c7;
-	-moz-box-shadow: 0px 6px 0px #4b96c7;
 	box-shadow: 0px 6px 0px #4b96c7;
 	border-radius: 1em 1em 0 1em;
 }
@@ -1188,8 +1032,6 @@ label {
 .add-tags-title:active, .add-tags-selected {
 	top: 4px;
 	background-color: #1d8f58;
-	-webkit-box-shadow: 0px 2px 0px #15643e;
-	-moz-box-shadow: 0px 2px 0px #15643e;
 	box-shadow: 0px 2px 0px #15643e;
 }
 
@@ -1200,8 +1042,6 @@ label {
 .add-tags-selected:hover {
 	cursor: pointer;
 	background-color: #1a7a4b;
-	-webkit-box-shadow: 0px 2px 0px #1a7a4b;
-	-moz-box-shadow: 0px 2px 0px #1a7a4b;
 	box-shadow: 0px 2px 0px #1a7a4b;
 }
 
