General style tweaks

--- a/DjangoGIF/apps/home/templates/home/home.html
+++ b/DjangoGIF/apps/home/templates/home/home.html
@@ -4,7 +4,7 @@
 <div class="home-section animate-bg" style="padding-top: 2em;">
     <div id="main-logo">
         <div class="main-logo-gif transparent animate">GIF</div>
-        <div class="main-logo-img levitate"><img src="http://i.imgur.com/SpaPReR.gif"></div>
+        <div class="main-logo-img levitate"><img src="http://i.imgur.com/eXxTPkH.gif"></div>
         <div class="main-logo-cache transparent animate">Cache</div>
     </div>
 
